# DailyDiff

./: .gitignore  README.md  RESPONSE_FORMAT.md  github_api.py  pyproject.toml  server.py  tools.py
src/dailydiff/: RESPONSE_FORMAT.md  formatters.py  server.py  tools.py
